--- a/posts/welcome/index.qmd
+++ b/posts/welcome/index.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Welcome To My Blog"
-author: "Tristan O'Malley"
-date: "2024-06-30"
+title: "Hola Mundo"
+author: "Juan Carlos Conde"
+date: "2024-07-03"
 categories: [news]
 ---
 
